--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -1,16 +1,16 @@
 {
-    "HEADER": {
-        "FINDE_PLACE": "Найти место",
-        "HISTORY": "История",
-        "ADD_BONUS": "Добавить бонус",
-        "BONUSES": "Бонусы",
-        "USER": "Пользователь",
-        "LOGINED_AS": "Вы вошли как:",
-        "SIGN_OUT": "Выход"
+    "header": {
+        "finde_place": "Найти место",
+        "history": "История",
+        "add_bonus": "Добавить бонус",
+        "bonuses": "Бонусы",
+        "user": "Пользователь",
+        "login_as": "Вы вошли как:",
+        "sign_out": "Выход"
     },
     "POPUP": {
-        "GO": "Перейти",
-        "DETAIL": "Детали"
+        "go": "Перейти",
+        "detail": "Детали"
     }
 
 }
