--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "findePlace": "Finde plce",
+    "findPlace": "Find place",
     "history": "History",
     "addBonus": "Add bonus",
     "bonuses": "Bonuses",
