--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "findePlace": "Найти место",
+    "findPlace": "Найти место",
     "history": "История",
     "addBonus": "Добавить бонус",
     "bonuses": "Бонусы",
