--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "findePlace": "Finde plce",
+    "findPlace": "Find place",
     "history": "History",
     "addBonus": "Add bonus",
     "bonuses": "Bonuses",
@@ -12,5 +12,6 @@
     "go": "Go",
     "detail": "Detail"
   },
-  "notFound": "Not found"
+  "notFound": "Not found",
+  "geolocationError": "Geolocation is disabled"
 }
