added select for choose vendor and feature for create e new vendor, added services

--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -28,7 +28,8 @@
       "bonusTagPlaceholder": "Введите новый тег...",
       "bonusAddress": "Адрес бонуса",
       "bonusAddressPlaceholder": "Введите страну, город, улицу, номер",
-      "bonusDateRange": "Введите диапазон даты бонуса"
+      "bonusDateRange": "Введите диапазон даты бонуса",
+      "saveNewVendorBtn": "Сохранить новый вендор"
     }
   },
   "loginPage": {
