--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -28,7 +28,8 @@
       "bonusTagPlaceholder": "Enter new tag...",
       "bonusAddress": "Bonus Address",
       "bonusAddressPlaceholder": "Enter country, city, town, number",
-      "bonusDateRange": "Enter a bonus date range"
+      "bonusDateRange": "Enter a bonus date range",
+      "saveNewVendorBtn": "Save new vendor"
     }
   },
   "loginPage": {
