change menu items

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -3,8 +3,7 @@
     "findPlace": "Find place",
     "history": "History",
     "addBonus": "Add bonus",
-    "bonuses": "Bonuses",
-    "user": "Users",
+    "statistics": "Statistics",
     "loginAs": "You're login as:",
     "signOut": "Sign out"
   },
