--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -3,8 +3,7 @@
     "findPlace": "Найти место",
     "history": "История",
     "addBonus": "Добавить бонус",
-    "bonuses": "Бонусы",
-    "user": "Пользователь",
+    "statistics": "Статистика",
     "loginAs": "Вы вошли как:",
     "signOut": "Выход"
   },
