changed title for add-bonus page and link find place

--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -1,8 +1,8 @@
 {
   "header": {
-    "findPlace": "Найти место",
+    "home": "Домашняя страница",
     "history": "История",
-    "addBonus": "Добавить бонус",
+    "bonuses": "Бонусы",
     "statistics": "Статистика",
     "loginAs": "Вы вошли как:",
     "signOut": "Выход"
