--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -1,8 +1,8 @@
 {
   "header": {
-    "findPlace": "Find place",
+    "home": "Home",
     "history": "History",
-    "addBonus": "Add bonus",
+    "bonuses": "Bonuses",
     "statistics": "Statistics",
     "loginAs": "You're login as:",
     "signOut": "Sign out"
