add translate to rate

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -35,5 +35,9 @@
     "login": "Enter your login",
     "password": "Enter your password",
     "signIn": "Sign in"
+  },
+  "rateForm": {
+    "title": "Rated",
+    "success": "Your review has been added"
   }
 }
