--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -35,5 +35,9 @@
     "login": "Введите логин пользователя",
     "password": "Введите пароль",
     "signIn": "Войти"
+  },
+  "rateForm": {
+    "title": "Отправлено",
+    "success": "Ваша оценка добавлена"
   }
 }
