--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -35,5 +35,19 @@
     "login": "Введите логин пользователя",
     "password": "Введите пароль",
     "signIn": "Войти"
+  },
+  "statistics": {
+    "filter": "Фильтр",
+    "vendor": "Компания",
+    "bonus": "Бонус",
+    "dateStart": "Начало действия",
+    "dateEnd": "Конец действия",
+    "dateAdd": "Дата добавления",
+    "rating": "Рейтинг",
+    "visits": "Кол-во визитов",
+    "city": "Город",
+    "country": "Страна",
+    "type": "Тип бонуса",
+    "isActive": "Статус"
   }
 }
