add translate, merge develop

--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -35,5 +35,17 @@
     "login": "Введите логин пользователя",
     "password": "Введите пароль",
     "signIn": "Войти"
+  },
+  "home": {
+    "pick": {
+      "labelFilter": "Фильтр",
+      "labelSorting": "Сортировка",
+      "sorting": {
+        "byTitle": "По заголовку",
+        "byCompany": "По имени компании",
+        "byDateStart": "По дате начала действия",
+        "byDateEnd": "По дате окончания действия"
+      }
+    }
   }
 }
