--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -35,5 +35,17 @@
     "login": "Enter your login",
     "password": "Enter your password",
     "signIn": "Sign in"
+  },
+  "home": {
+    "pick": {
+      "labelFilter": "Filter",
+      "labelSorting": "Sorting",
+      "sorting": {
+        "byTitle": "Alphabetically by title",
+        "byCompany": "Alphabetically by company",
+        "byDateStart": "By bonus date start",
+        "byDateEnd": "By bonus date end"
+      }
+    }
   }
 }
