add types, remove logging

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -44,7 +44,9 @@
         "byTitle": "Alphabetically by title",
         "byCompany": "Alphabetically by company",
         "byDateStart": "By bonus date start",
-        "byDateEnd": "By bonus date end"
+        "byDateEnd": "By bonus date end",
+        "byRating": "By rating",
+        "byType": "By type"
       }
     }
   }
