--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -44,7 +44,9 @@
         "byTitle": "По заголовку",
         "byCompany": "По имени компании",
         "byDateStart": "По дате начала действия",
-        "byDateEnd": "По дате окончания действия"
+        "byDateEnd": "По дате окончания действия",
+        "byRating": "По рейтингу",
+        "byType": "По типу"
       }
     }
   }
