feat: change structure
- change columns
- add get request service
- add statistics interface
- add toaster
- change translation for filter

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -37,7 +37,7 @@
     "signIn": "Sign in"
   },
   "statistics": {
-    "filter": "Filter",
+    "filter": "Quick search",
     "vendor": "Vendor",
     "bonus": "Bonus",
     "dateStart": "Start",
