--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -37,7 +37,7 @@
     "signIn": "Войти"
   },
   "statistics": {
-    "filter": "Фильтр",
+    "filter": "Быстрый поиск",
     "vendor": "Компания",
     "bonus": "Бонус",
     "dateStart": "Начало действия",
