Feat: add translation

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -54,7 +54,10 @@
     "city": "City",
     "country": "Country",
     "type": "Bonus type",
-    "isActive": "Is active"
+    "isActive": "Is active",
+    "filters": "Filters",
+    "clear": "Clear filters",
+    "apply": "Apply filters"
   },
   "home": {
     "pick": {
