--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -54,7 +54,10 @@
     "city": "Город",
     "country": "Страна",
     "type": "Тип бонуса",
-    "isActive": "Статус"
+    "isActive": "Статус",
+    "filters": "Фильтры",
+    "clear": "Очистить",
+    "apply": "Применить"
   },
   "home": {
     "pick": {
