--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -30,6 +30,7 @@
       "bonusDateRange": "Введите диапазон даты бонуса",
       "saveNewVendorBtn": "Сохранить новый вендор"
     },
+    "searcher": "Введите имя вендора",
     "notification": {
       "saveBonusError": {
         "title": "Ошибка сохранения",
