--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -35,6 +35,26 @@
       "saveBonusError": {
         "title": "Ошибка сохранения",
         "message": "Возникли проблемы с сохранением бонуса!"
+      },
+      "saveBonusSuccess": {
+        "title": "Операция успешна!",
+        "message": "Сохранен новый бонус!"
+      },
+      "getAddress": {
+        "title": "Ошибка ответа",
+        "message": "Возникли проблемы с ответом сервера!"
+      },
+      "getVendors": {
+        "title": "Ошибка ответа",
+        "message": "Возникли проблемы с ответом сервера!"
+      },
+      "saveVendorError": {
+        "title": "Ошибка сохранения",
+        "message": "Возникли проблемы с сохранением вендора!"
+      },
+      "saveVendorSuccess": {
+        "title": "Операция успешна!",
+        "message": "Сохранен новый вендор!"
       }
     }
   },
