--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -110,5 +110,9 @@
         "message": "There are no bonuses for these filters yet"
       }
     }
+  },
+  "loginErrors": {
+    "invalidData": "Invalide login or password",
+    "serverError": "Something went wrong"
   }
 }
