--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -110,5 +110,9 @@
         "message": "По этим фильтрам бонусов пока нет"
       }
     }
+  },
+  "loginErrors": {
+    "invalidData": "Неверный логин или пароль",
+    "serverError": "Что-то пошло не так"
   }
 }
