--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -30,7 +30,7 @@
       "bonusDateRange": "Enter a bonus date range",
       "saveNewVendorBtn": "Save new vendor"
     },
-    "searcher": "Enter vendor name",
+    "searcher": "Filter by vendor name",
     "notification": {
       "saveBonusError": {
         "title": "Save error",
