--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -30,7 +30,7 @@
       "bonusDateRange": "Введите диапазон даты бонуса",
       "saveNewVendorBtn": "Сохранить новый вендор"
     },
-    "searcher": "Введите имя вендора",
+    "searcher": "Фильтр по имени вендора",
     "notification": {
       "saveBonusError": {
         "title": "Ошибка сохранения",
