--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -58,6 +58,18 @@
       }
     }
   },
+  "history": {
+    "notification": {
+      "applySuccess" : {
+        "title": "Операция успешна!",
+        "message": "Ваша заявка успешно отправлена!"
+      },
+      "applyError" : {
+        "title": "Ошибка ответа!",
+        "message": "Возникли проблемы с сохранением заявки!"
+      }
+    }
+  },
   "loginPage": {
     "login": "Введите логин пользователя",
     "password": "Введите пароль",
