--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -147,7 +147,13 @@
     }
   },
   "loginErrors": {
-    "invalidData": "Неверный логин или пароль",
-    "serverError": "Что-то пошло не так"
+    "invalidData": {
+      "title": "Ошыбка входа",
+      "message" : "Неверный логин или пароль"
+    },
+    "serverError": {
+      "title": "Ошыбка входа",
+      "message" : "Что-то пошло не так"
+    }
   }
 }
