add confirm to home

--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -104,7 +104,11 @@
         "byRating": "По рейтингу",
         "byType": "По типу"
       }
-    }
+    },
+    "confirm": {
+    "question": "Вы действительно хотите отправить заявку?",
+    "yes": "Да",
+    "no": "Нет"}
   },
   "rateForm": {
     "notification": {
