--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -104,7 +104,11 @@
         "byRating": "By rating",
         "byType": "By type"
       }
-    }
+    },
+    "confirm": {
+    "question": "Are you sure you want to apply?",
+    "yes": "Yes",
+    "no": "No"}
   },
   "rateForm": {
     "notification": {
