--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -106,7 +106,7 @@
       }
     },
     "confirm": {
-    "question": "Вы действительно хотите отправить заявку?",
+    "question": "Вы хотите отправить заявку?",
     "yes": "Да",
     "no": "Нет"}
   },
