--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -40,6 +40,14 @@
         "title": "Операция успешна!",
         "message": "Сохранен новый бонус!"
       },
+      "saveUpdateBonus": {
+        "title": "Операция успешна!!",
+        "message": "Изменения сохранены!"
+      },
+      "UpdateBonusError": {
+        "title": "Ошибка сохранения",
+        "message": "Возникли проблемы с сохранением бонуса!"
+      },
       "getAddress": {
         "title": "Ошибка ответа",
         "message": "Возникли проблемы с ответом сервера!"
