--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -116,7 +116,10 @@
     "confirm": {
     "question": "Вы хотите отправить заявку?",
     "yes": "Да",
-    "no": "Нет"}
+    "no": "Нет",
+    "description": "Описание: ",
+    "phone": "Телефон: ",
+    "address": "Адрес: "}
   },
   "rateForm": {
     "notification": {
