--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -103,16 +103,27 @@
   "home": {
     "pick": {
       "labelFilter": "Фильтр",
-      "labelSorting": "Сортировка",
-      "sorting": {
-        "byTitle": "По заголовку",
-        "byCompany": "По имени компании",
-        "byDateStart": "По дате начала действия",
-        "byDateEnd": "По дате окончания действия",
-        "byRating": "По рейтингу",
-        "byType": "По типу"
-      }
+      "labelSorting": "Сортировка"
     }
+  },
+  "tagsInput": {
+    "tags": "Теги",
+    "newTags": "Новые теги..."
+  },
+  "cityInput": {
+    "city": "Город"
+  },
+  "datepicker": {
+    "dateStart": "Начальная дата",
+    "dateEnd": "Конечная дата"
+  },
+  "sorting": {
+    "byTitle": "По заголовку",
+    "byCompany": "По имени компании",
+    "byDateStart": "По дате начала действия",
+    "byDateEnd": "По дате окончания действия",
+    "byRating": "По рейтингу",
+    "byType": "По типу"
   },
   "rateForm": {
     "notification": {
