--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -103,16 +103,27 @@
   "home": {
     "pick": {
       "labelFilter": "Filter",
-      "labelSorting": "Sorting",
-      "sorting": {
-        "byTitle": "Alphabetically by title",
-        "byCompany": "Alphabetically by company",
-        "byDateStart": "By bonus date start",
-        "byDateEnd": "By bonus date end",
-        "byRating": "By rating",
-        "byType": "By type"
-      }
+      "labelSorting": "Sorting"
     }
+  },
+  "tagsInput": {
+    "tags": "Tags",
+    "newTags": "New tags..."
+  },
+  "cityInput": {
+    "city": "City"
+  },
+  "datepicker": {
+    "dateStart": "Start date",
+    "dateEnd": "End date"
+  },
+  "sorting": {
+    "byTitle": "Alphabetically by title",
+    "byCompany": "Alphabetically by company",
+    "byDateStart": "By bonus date start",
+    "byDateEnd": "By bonus date end",
+    "byRating": "By rating",
+    "byType": "By type"
   },
   "rateForm": {
     "notification": {
@@ -157,7 +168,7 @@
   "loginErrors": {
     "invalidData": {
       "title": "Login error",
-      "message" : "Invalide login or password"
+      "message" : "Invalid login or password"
     },
     "serverError": {
       "title": "Login error",
