--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -163,5 +163,10 @@
       "title": "Login error",
       "message" : "Something went wrong"
     }
+  },
+  "choosePlace": {
+    "geolocation": "Geolocation",
+    "office": "Choose office",
+    "cancel": "Cancel"
   }
 }
