added spinner and notification

--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -75,6 +75,10 @@
       "applyError" : {
         "title": "Ошибка ответа!",
         "message": "Возникли проблемы с сохранением заявки!"
+      },
+      "noBonuses": {
+        "title": "",
+        "message": "У Вас пока нет бонусов!"
       }
     }
   },
