--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -75,6 +75,10 @@
       "applyError" : {
         "title": "Response error!",
         "message": "Some problem with your apply!"
+      },
+      "noBonuses": {
+        "title": "",
+        "message": "You don't have any bonuses yet!"
       }
     }
   },
