feat: add translation

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -186,6 +186,7 @@
   "choosePlace": {
     "geolocation": "Geolocation",
     "office": "Choose office",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "ok": "Ok"
   }
 }
