--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -185,6 +185,7 @@
   "choosePlace": {
     "geolocation": "Геолокация",
     "office": "Выберите офис",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "ok": "Принять"
   }
 }
