--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -112,7 +112,10 @@
     "description": "Description: ",
     "phone": "Phone: ",
     "address": "Address"
-  }
+  },
+  "details": "Details",
+  "edit": "Edit",
+  "rate": "Rate"
   },
   "tagsInput": {
     "tags": "Tags",
