--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -16,7 +16,7 @@
     "addBonusBtn": "Добавить бонус",
     "goBack": "Назад",
     "saveBonus": "Сохранить",
-    "form" : {
+    "form": {
       "vendorName": "Имя вендора",
       "vendorEmail": "Введите адрес ел. почты вендора",
       "phone": "Номер телефона",
@@ -68,11 +68,11 @@
   },
   "history": {
     "notification": {
-      "applySuccess" : {
+      "applySuccess": {
         "title": "Операция успешна!",
         "message": "Ваша заявка успешно отправлена!"
       },
-      "applyError" : {
+      "applyError": {
         "title": "Ошибка ответа!",
         "message": "Возникли проблемы с сохранением заявки!"
       }
@@ -106,12 +106,16 @@
       "labelSorting": "Сортировка"
     },
     "confirm": {
-    "question": "Вы хотите отправить заявку?",
-    "yes": "Да",
-    "no": "Нет",
-    "description": "Описание: ",
-    "phone": "Телефон: ",
-    "address": "Адрес: "}
+      "question": "Вы хотите отправить заявку?",
+      "yes": "Да",
+      "no": "Нет",
+      "description": "Описание: ",
+      "phone": "Телефон: ",
+      "address": "Адрес: "
+    },
+    "details": "Детально",
+    "edit": "Изменить",
+    "rate": "Оценить"
   },
   "tagsInput": {
     "tags": "Теги",
@@ -175,11 +179,11 @@
   "loginErrors": {
     "invalidData": {
       "title": "Ошыбка входа",
-      "message" : "Неверный логин или пароль"
+      "message": "Неверный логин или пароль"
     },
     "serverError": {
       "title": "Ошыбка входа",
-      "message" : "Что-то пошло не так"
+      "message": "Что-то пошло не так"
     }
   }
 }
