--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -9,7 +9,7 @@
   },
   "popup": {
     "go": "Перейти",
-    "detail": "Детали"
+    "detail": "Детальнее"
   },
   "notFound": "Не найдено",
   "addBonus": {
