--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -9,7 +9,7 @@
   },
   "popup": {
     "go": "Go",
-    "detail": "Detail"
+    "forward": "Forward"
   },
   "notFound": "Not found",
   "addBonus": {
