--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -102,7 +102,9 @@
     "isActive": "Статус",
     "filters": "Фильтры",
     "clear": "Очистить",
-    "apply": "Применить"
+    "apply": "Применить",
+    "vendorName": "Имя компании",
+    "bonusTitle": "Название бонуса"
   },
   "home": {
     "pick": {
