--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -215,7 +215,7 @@
     "chelyabinsk": "Челябинск",
     "yekaterinburg": "Екатеринбург",
     "kharkiv": "Харьков",
-    "kyiv": "Харьков",
+    "kyiv": "Киев",
     "lviv": "Львов",
     "odesa": "Одесса",
     "vinnytsia": "Винница",
