--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -203,7 +203,7 @@
     "walnutCreek": "Walnut Creek",
     "boulder": "Boulder",
     "brest": "Brest",
-    "gomel": "Gomel",
+    "homyel": "Homyel",
     "grodno": "Grodno",
     "minsk": "Minsk",
     "vitebsk": "Vitebsk",
