--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -203,7 +203,7 @@
     "walnutCreek": "Уолнат-Крик",
     "boulder": "Боулдер",
     "brest": "Брест",
-    "gomel": "Гомель",
+    "homyel": "Гомель",
     "grodno": "Гродно",
     "minsk": "Минск",
     "vitebsk": "Витебск",
