--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -121,7 +121,8 @@
     },
     "details": "Детально",
     "edit": "Изменить",
-    "rate": "Оценить"
+    "rate": "Оценить",
+    "changeStatus": "Изменить статус"
   },
   "tagsInput": {
     "tags": "Теги",
