--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -63,6 +63,14 @@
       "saveVendorSuccess": {
         "title": "Операция успешна!",
         "message": "Сохранен новый вендор!"
+      },
+      "saveBonusStatus": {
+        "title": "Операция успешна!",
+        "message": "Статус бонуса изменен!"
+      },
+      "BonusStatusError": {
+        "title": "Ошибка сохранения",
+        "message": "Возникли проблемы с изменением статуса!"
       }
     }
   },
