--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -115,6 +115,8 @@
     "bonusTitle": "Bonus title"
   },
   "home": {
+    "findPlace": "Find place",
+    "hideFilter": "Hide filter and sorting",
     "pick": {
       "labelFilter": "Filter",
       "labelSorting": "Sorting"
