add active and not active sign on change status button

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -132,7 +132,9 @@
     "details": "Details",
     "edit": "Edit",
     "rate": "Rate",
-    "changeStatus": "Change status"
+    "changeStatus": "Change status",
+    "activated": "Active",
+    "deactivated": "Not active"
   },
   "tagsInput": {
     "tags": "Tags",
