add translation to rate form buttons

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -88,6 +88,10 @@
         "title": "",
         "message": "You don't have any bonuses yet!"
       }
+    },
+    "rateForm": {
+      "backButton": "Back",
+      "applyButton": "Apply"
     }
   },
   "loginPage": {
