--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -88,6 +88,10 @@
         "title": "",
         "message": "У Вас пока нет бонусов!"
       }
+    },
+    "rateForm": {
+      "backButton": "Назад",
+      "applyButton": "Отправить"
     }
   },
   "loginPage": {
