add translate to rated label

--- a/src/assets/i18n/EN.json
+++ b/src/assets/i18n/EN.json
@@ -92,7 +92,8 @@
     "rateForm": {
       "backButton": "Back",
       "applyButton": "Apply"
-    }
+    },
+    "ratedLabel": "Rated"
   },
   "loginPage": {
     "login": "Enter your login",
