--- a/src/assets/i18n/RU.json
+++ b/src/assets/i18n/RU.json
@@ -92,7 +92,8 @@
     "rateForm": {
       "backButton": "Назад",
       "applyButton": "Отправить"
-    }
+    },
+    "ratedLabel": "Оценено"
   },
   "loginPage": {
     "login": "Введите логин пользователя",
